shortlog: tune css to prevent word wrap of td age

--- a/css/gitphpskin.css
+++ b/css/gitphpskin.css
@@ -189,6 +189,9 @@ tr.clast td {
         border-bottom: 1px dotted gray;
 }
 
+.shortlog tr td.age {
+	min-width: 64px;
+}
 
 /*
  * Messages
